# pyorailytapahtumat

./: .gitignore  README.md  check_duplicates.bat  check_duplicates_verbose.bat  pyproject.toml  requirements.txt  run_admin_panel.bat  run_streamlit_app.bat  update.py  update_events.bat
.devcontainer/: devcontainer.json
.githooks/: pre-push
archive/: README.md
archive/output/: bikeland_events.txt  event_statistics.txt  (+5 more)
data/: README_SIMPLE_EVENTS.md  all_events.json  all_events.json.bak  bikeland_events.json  bikeland_response.html  club_events.json  club_sources.json  csv_events.json  event_blacklist.json  geocache.json  manual_edits.json  manual_events.json  monesko_events.json  pptiming_events.json  pyorailyfi-tapahtumat.csv  pyorailyfi-tapahtumat_old.csv  pyorailyfi_events.json  raceresult_events.json  seurat_masterlist.md  simple_events.txt  user_feedback.txt  webscorer_events.json
docs/: EVENT_SOURCES.md  LEARNINGS.md  PROJECT_DESCRIPTION.md  streamlit_app_guide.md
output/: clean_combined_events.txt  combined_events.txt  datetime_bikeland_events.txt  duplicate_events.txt  specific_bikeland_events.txt
src/: bikeland_events.py  check_duplicates.py  clean_combined_events.py  club_events.py  convert_to_simple_format.py  csv_events.py  event_admin.py  event_manager.py  event_map_app.py  events_map.py  final_datetime_bikeland_parser.py  generate_sample_events.py  geocode_events.py  manual_events.py  monesko_events.py  pptiming_events.py  pyorailyfi_events.py  raceresult_events.py  simple_events_format.py  webscorer_events.py
tests/: test_data_sources.py
(+11 files in other folders)
