[project]
name = "ulkopyorailytapahtumat"
version = "0.1.0"
description = ""
authors = [
    {name = "Panu",email = "panu.alaluusua@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (==2.31.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "streamlit (>=1.45.1,<2.0.0)",
    "folium (>=0.19.7,<0.20.0)",
    "streamlit-folium (>=0.25.0,<0.26.0)",
    "geopy (>=2.4.1,<3.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "pydeck (>=0.9.1,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
